--- a/creator/self.html
+++ b/creator/self.html
@@ -8,7 +8,7 @@
     <meta name="author" content="@aryan Patil">
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <!-- greensock -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
